	--- 9.8.6 released ---

3638.	[cleanup]	Add the ability to handle ENOPROTOOPT in case it is 
			encountered. [RT #34668]

	--- 9.8.6rc2 released ---

3637.	[bug]		'allow-query-on' was checking the source address
			rather than the destination address. [RT #34590]

3636.	[bug]		Automatic empty zones now behave better with
			forward only "zones" beneath them. [RT #34583]

3635.	[bug]		Signatures were not being removed from a zone with
			only KSK keys for a algorithm. [RT #24439]

3634.	[func]		Report build-id in rndc status. Report build-id
			when building from a git repository. [RT #20422]

3633.	[cleanup]	Refactor OPT processing in named to make it easier
			to support new EDNS options. [RT #34414]

3632.	[bug]		Signature from newly inactive keys were not being
			removed. [RT #32178]

3631.	[bug]		Remove spurious warning about missing signatures when
			qtype is SIG. [RT #34600]

3630.	[bug]		Ensure correct ID computation for MD5 keys. [RT #33033]

3627.	[bug]		RPZ changes were not effective on slaves. [RT #34450]

3625.	[bug]		Don't send notify messages to machines outside of the
			test setup.

	--- 9.8.6rc1 released ---

3621.	[security]	Incorrect bounds checking on private type 'keydata'
			can lead to a remotely triggerable REQUIRE failure
			(CVE-2013-4854). [RT #34238]

3615.	[cleanup]	"configure" now finishes by printing a summary
			of optional BIND features and whether they are
			active or inactive. ("configure --enable-full-report"
			increases the verbosity of the summary.) [RT #31777]

3614.	[port]		Check for <linux/types.h>. [RT #34162]

3611.	[bug]		Improved resistance to a theoretical authentication
			attack based on differential timing.  [RT #33939]

3610.	[cleanup]	win32: Some executables had been omitted from the
			installer. [RT #34116]

3608.	[port]		win32: added todos.pl script to ensure all text files
			the win32 build depends on are converted to DOS
			newline format. [RT #22067]
